Fixed with liliia-ponomarenko's comments